--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["Anton Hagser <anton.hagser@epsidel.se>"]
 edition = "2018"
 
+[features]
+default = []
+benchmark = []
+
 [dependencies]
 chrono = "0.4"
 reqwest = { version = "0.10", features = ["json"] }
